force-app/main/default/objects/Signal_Event__e/Signal_Event__e.object-meta.xml
<CustomObject>
    <description>Published when a signal adapter delivers new data for a pipeline record.</description>
    <label>Signal Event</label>
    <pluralLabel>Signal Events</pluralLabel>
</CustomObject>