force-app/main/default/objects/Signal_Event__e/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Opportunity ID</description>
    <label>Opportunity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>