force-app/main/default/objects/Signal_Event__e/fields/Signal_Data__c.field-meta.xml
<CustomField>
    <fullName>Signal_Data__c</fullName>
    <description>JSON of normalized signals</description>
    <label>Signal Data</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>