force-app/main/default/objects/Signal_Event__e/fields/Signal_Source__c.field-meta.xml
<CustomField>
    <fullName>Signal_Source__c</fullName>
    <description>CRM, GONG, MOMENTUM, etc.</description>
    <label>Signal Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>